Encoder: export signal to csv primary code

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12258,7 +12258,6 @@ on current Chronojump version.</property>
                                                             <property name="spacing">2</property>
                                                             <child>
                                                             <widget class="GtkEntry" id="entry_encoder_signal_comment">
-                                                            <property name="width_request">125</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="invisible_char">●</property>
@@ -12353,6 +12352,29 @@ on current Chronojump version.</property>
                                                             <property name="position">1</property>
                                                             </packing>
                                                             </child>
+                                                            <child>
+                                                            <widget class="GtkButton" id="button_encoder_export_signal">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="receives_default">True</property>
+                                                            <property name="has_tooltip">True</property>
+                                                            <property name="tooltip" translatable="yes">Export session to _CSV (Spreadsheet)</property>
+                                                            <property name="use_action_appearance">False</property>
+                                                            <signal name="clicked" handler="on_button_encoder_export_signal_clicked" swapped="no"/>
+                                                            <child>
+                                                            <widget class="GtkImage" id="image29">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="stock">gtk-convert</property>
+                                                            </widget>
+                                                            </child>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="expand">True</property>
+                                                            <property name="fill">True</property>
+                                                            <property name="position">2</property>
+                                                            </packing>
+                                                            </child>
                                                           </widget>
                                                           <packing>
                                                             <property name="expand">True</property>
@@ -12368,7 +12390,6 @@ on current Chronojump version.</property>
                                                             <property name="spacing">4</property>
                                                             <child>
                                                             <widget class="GtkProgressBar" id="encoder_pulsebar_capture">
-                                                            <property name="width_request">150</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="activity_mode">True</property>
