--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -5803,7 +5803,6 @@ Second Chronopic to platforms.</property>
                                                             <property name="spacing">2</property>
                                                             <child>
                                                             <widget class="GtkCheckButton" id="checkbutton_video">
-                                                            <property name="visible">False</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">False</property>
                                                             <property name="tooltip" translatable="yes">Record video (on / off)</property>
@@ -5859,7 +5858,6 @@ Second Chronopic to platforms.</property>
                                                             </child>
                                                             <child>
                                                             <widget class="GtkCheckButton" id="checkbutton_volume">
-                                                            <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="receives_default">False</property>
                                                             <property name="tooltip" translatable="yes">Play sound (on / off)</property>
@@ -5914,6 +5912,11 @@ Second Chronopic to platforms.</property>
                                                             </packing>
                                                             </child>
                                                             <child>
+                                                            <widget class="GtkAlignment" id="alignment31">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="top_padding">12</property>
+                                                            <child>
                                                             <widget class="GtkButton" id="button_execute_test">
                                                             <property name="height_request">60</property>
                                                             <property name="visible">True</property>
@@ -5951,6 +5954,8 @@ Second Chronopic to platforms.</property>
                                                             <property name="fill">True</property>
                                                             <property name="position">1</property>
                                                             </packing>
+                                                            </child>
+                                                            </widget>
                                                             </child>
                                                             </widget>
                                                             </child>
@@ -14870,7 +14875,8 @@ Evaluator can use real name or nickname.</property>
               <widget class="GtkLabel" id="label8">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Contacts (platform or photocell)</property>
+                <property name="label" translatable="yes">Contacts
+(platform or photocell)</property>
               </widget>
               <packing>
                 <property name="tab_fill">False</property>
@@ -14894,7 +14900,7 @@ Evaluator can use real name or nickname.</property>
                       <widget class="GtkLabel" id="label10">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label">Select the port where Chronopic is connected.
+                        <property name="label" translatable="yes">Select the port where Chronopic is connected.
 
 There's no port comprobation or activation on encoder.
 
